# general-number-field-sieve

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindGMP.cmake  FindNTL.cmake
src/: gnfs.cc  gnfs.h  norm_finding.cc  norm_finding.h  parameters.cc  parameters.h  setup.cc  setup.h  smooth_pair_finder.cc  smooth_pair_finder.h  square_subset_finder.cc  square_subset_finder.h  util.cc  util.h
